attempting to fix d3 zoom on mobile

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -87,7 +87,7 @@
   cursor: pointer;
 }
 .gridviz-icon-button:hover{
-  background: #e9e9e9
+  background: lightgrey
 }
 .gridviz-icon-button span.icon {
   background: url(imgs/home.svg) no-repeat;
@@ -131,11 +131,16 @@
 }
 
 .gridviz-plugin {
-  background-color: #efefefe8;
+  background-color: #fff;
+  border-radius: .25rem;
   color: black;
   fill: black;
-  /* border: 2px solid #888888; */
-  border-radius: 1px;
+  -webkit-box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16), 0 2px 10px 0 rgba(0,0,0,0.12);;
+-moz-box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16), 0 2px 10px 0 rgba(0,0,0,0.12);;
+box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16), 0 2px 10px 0 rgba(0,0,0,0.12);;
+}
+.gridviz-select{
+  width:100%;
 }
 
 /* LEGEND */
@@ -163,7 +168,6 @@
   bottom: 10px;
   left: 10px;
   padding:5px;
-  background:#efefefe8;
 }
 .gridviz-legend-horizontal {
   height: 65px;
@@ -192,6 +196,8 @@ rect.swatch {
 
 /* dropdowns  */
 .gridviz-selectors {
+  width: 15%;
+  font-size:0.8rem;
   z-index: 9999;
   position: absolute;
   top: 10px;
@@ -201,6 +207,12 @@ rect.swatch {
 .gridviz-dropdown {
   padding:8px;
   color: black;
+}
+.gridviz-dropdown select {
+  direction: rtl;
+}
+.gridviz-dropdown option{
+  direction: ltr;
 }
 /* #gridviz-colorscheme-dropdown-container {
   z-index: 9999;
